Fix bug where editing ticket name would cause a shift of elements in the ticket-detailed-view component

--- a/frontend/src/app/features/board-page/components/ticket-detailed-view/ticket-detailed-view.component.scss
+++ b/frontend/src/app/features/board-page/components/ticket-detailed-view/ticket-detailed-view.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../assets/styles/main.scss';
+ @import '../../../../assets/styles/main.scss';
 
 .overlay {
   position: fixed;
@@ -62,31 +62,35 @@
   justify-content: space-between;
 }
 
-.ticket-name {
-  box-sizing: border-box;
-  padding: 0.2rem;
-  width: 100%; 
-  max-width: 100%; 
-  font-size: 1.8rem;
-  padding-left : 0.2rem;
-  font-weight: bold;
-  cursor: pointer;
-}
-
 .ticket-name-input {
-  background : $secondary;
-  padding: 0.2rem;
-  padding : 0;
-  width : 100%;
+  width: 100%;
   font-size: 1.8rem;
-  padding-left : 0.2rem;
   font-weight: bold;
   border: none;
-  border-color : none;
-  border-radius: $text-input-border-radius;
+  background-color: transparent;
+  color: $secondary;
+  cursor: pointer;
+  padding: 0.1rem;
+  padding-left : 0.2rem;
+  margin: 0;
+  line-height: 1.2;
+  border: 1px solid transparent;
   box-sizing: border-box;
-  background-color: $background-lighter; 
-  color : $secondary;
+  border-radius : $text-input-border-radius;
+
+  &:read-only {
+    cursor: pointer;
+  }
+
+  &.editing {
+    background-color: $background-lighter;
+    padding: 0.1rem;
+    padding-left : 0.2rem;
+    border: 1px solid $secondary;
+    box-sizing: border-box;
+    cursor: text;
+    border-radius : $text-input-border-radius;
+  }
 }
 
 .subheading {
